# saul

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
saul/: analysis.py  batch_process.py  llm.py  model.py  saul.py
static/: index.html  script.js  style.css
