[project]
name = "saul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "google-genai>=1.55.0",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "openai>=2.14.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
